test/files/neg/t1010.check
t1010.scala:14: error: type mismatch;
 found   : MailBox#Message
 required: _1.in.Message where val _1: Actor
   unstable.send(msg) // in.Message becomes unstable.Message, but that's ok since Message is a concrete type member
                 ^
one error found
